Replace position model with int in block
